--- a/Players_fixed_table.ipynb
+++ b/Players_fixed_table.ipynb
@@ -12,13 +12,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 67,
+      "execution_count": 3,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "Gorg-TjzXeal",
-        "outputId": "c0617e89-7042-4119-c871-23860741bcf4"
+        "outputId": "136d0e59-c6fd-49fa-98e4-a913be128bc1"
       },
       "outputs": [
         {
@@ -61,7 +61,7 @@
       "metadata": {
         "id": "4uiY8VTA6kN2"
       },
-      "execution_count": 63,
+      "execution_count": 4,
       "outputs": []
     },
     {
@@ -121,7 +121,7 @@
       "metadata": {
         "id": "KnltnHuj_0Fy"
       },
-      "execution_count": 64,
+      "execution_count": 5,
       "outputs": []
     },
     {
@@ -135,7 +135,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 57,
+      "execution_count": 6,
       "metadata": {
         "id": "xdDpI62ia13V"
       },
@@ -236,28 +236,11 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 8,
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 245
-        },
-        "id": "1PCwNHwCbVHv",
-        "outputId": "0c133fa4-59a5-49e6-84db-caca808f411b"
+        "id": "1PCwNHwCbVHv"
       },
-      "outputs": [
-        {
-          "output_type": "error",
-          "ename": "NameError",
-          "evalue": "ignored",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-2-92179ec772a6>\u001b[0m in \u001b[0;36m<cell line: 25>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     23\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     24\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 25\u001b[0;31m \u001b[0mstart_date\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mdatetime\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m2000\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     26\u001b[0m \u001b[0mend_date\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mdatetime\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m2023\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m10\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m5\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     27\u001b[0m \u001b[0;31m# create_initial_list(start_date,end_date)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;31mNameError\u001b[0m: name 'datetime' is not defined"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "def create_initial_list(start_date,end_date):\n",
         "  list_all_names=[]\n",
@@ -282,28 +265,29 @@
         "      if player_name==player_url.split('/players/')[1].split('/')[0]:\n",
         "        list_all_urls_final[k]=player_url\n",
         "\n",
-        "\n",
-        "start_date = datetime(2000, 1, 1)\n",
-        "end_date = datetime(2023, 10, 5)\n",
-        "# create_initial_list(start_date,end_date)"
+        "\n"
       ]
     },
     {
       "cell_type": "code",
       "source": [
-        "# # Create a new file with content\n",
-        "file_name_player_names = \"list_all_players_names.txt\"  # The name of the new file\n",
-        "file_name_urls = \"list_all_urls.txt\"  # The name of the new file\n",
-        "list_all_names_str=str(list_all_names)\n",
-        "list_all_urls_str=str(list_all_urls_final)\n",
+        "# start_date = datetime(2000, 1, 1)\n",
+        "# end_date = datetime(2023, 10, 5)\n",
+        "# list_all_names,list_all_urls_final=create_initial_list(start_date,end_date)\n",
         "\n",
-        "add_file_github(file_name_player_names,list_all_names_str)\n",
-        "add_file_github(file_name_urls,list_all_urls_str)"
+        "# # # Create a new file with content\n",
+        "# file_name_player_names = \"list_all_players_names.txt\"  # The name of the new file\n",
+        "# file_name_urls = \"list_all_urls.txt\"  # The name of the new file\n",
+        "# list_all_names_str=str(list_all_names)\n",
+        "# list_all_urls_str=str(list_all_urls_final)\n",
+        "\n",
+        "# add_file_github(file_name_player_names,list_all_names_str)\n",
+        "# add_file_github(file_name_urls,list_all_urls_str)"
       ],
       "metadata": {
         "id": "-WEm8lKM2B8p"
       },
-      "execution_count": 13,
+      "execution_count": 9,
       "outputs": []
     },
     {
@@ -415,7 +399,7 @@
     "colab": {
       "provenance": [],
       "mount_file_id": "1eKWlpyRPemghzmN8X1cYFW6MOJTJpUDm",
-      "authorship_tag": "ABX9TyMz5PyYSQ/SYr7IFzoytx8p",
+      "authorship_tag": "ABX9TyOWdJBe912h24xHdPJ/PSSO",
       "include_colab_link": true
     },
     "kernelspec": {
