--- a/functions_fixed_table.ipynb
+++ b/functions_fixed_table.ipynb
@@ -265,6 +265,8 @@
         "      if player_name==player_url.split('/players/')[1].split('/')[0]:\n",
         "        list_all_urls_final[k]=player_url\n",
         "\n",
+        "  return(list_all_names,list_all_urls_final)\n",
+        "\n",
         "\n"
       ]
     },
@@ -375,7 +377,7 @@
     "colab": {
       "provenance": [],
       "mount_file_id": "1eKWlpyRPemghzmN8X1cYFW6MOJTJpUDm",
-      "authorship_tag": "ABX9TyPcYJ+nJF0xNrdg3mpS4Z+7",
+      "authorship_tag": "ABX9TyMTOxZDtGBrnXT6YARy0Yl3",
       "include_colab_link": true
     },
     "kernelspec": {
