--- a/functions_fixed_table.ipynb
+++ b/functions_fixed_table.ipynb
@@ -236,7 +236,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": 10,
       "metadata": {
         "id": "1PCwNHwCbVHv"
       },
@@ -264,7 +264,8 @@
         "    for player_url in list_all_urls:\n",
         "      if player_name==player_url.split('/players/')[1].split('/')[0]:\n",
         "        list_all_urls_final[k]=player_url\n",
-        "\n",
+        "  print('test')\n",
+        "  print(list_all_names,list_all_urls_final)\n",
         "  return(list_all_names,list_all_urls_final)\n",
         "\n",
         "\n"
@@ -377,7 +378,7 @@
     "colab": {
       "provenance": [],
       "mount_file_id": "1eKWlpyRPemghzmN8X1cYFW6MOJTJpUDm",
-      "authorship_tag": "ABX9TyMTOxZDtGBrnXT6YARy0Yl3",
+      "authorship_tag": "ABX9TyPhgkyO/QcwbIzp8WgKoCKN",
       "include_colab_link": true
     },
     "kernelspec": {
