--- a/functions_fixed_table.ipynb
+++ b/functions_fixed_table.ipynb
@@ -253,7 +253,7 @@
         "  for weekly_url_ranking in find_list_weekly_ranking_url(start_date, end_date):\n",
         "    if weekly_url_ranking.split('rankDate=')[1].split('-')[0] not in list_year:\n",
         "      list_year.append(weekly_url_ranking.split('rankDate=')[1].split('-')[0])\n",
-        "      print(list_year)\n",
+        "      # print(list_year)\n",
         "    names_and_url_week=update_names_and_urls(weekly_url_ranking,list_all_names,list_all_urls)\n",
         "    list_all_names=names_and_url_week[0]\n",
         "    list_all_urls=names_and_url_week[1]\n",
@@ -264,8 +264,7 @@
         "    for player_url in list_all_urls:\n",
         "      if player_name==player_url.split('/players/')[1].split('/')[0]:\n",
         "        list_all_urls_final[k]=player_url\n",
-        "  print('test')\n",
-        "  print(list_all_names,list_all_urls_final)\n",
+        "\n",
         "  return(list_all_names,list_all_urls_final)\n",
         "\n",
         "\n"
@@ -378,7 +377,7 @@
     "colab": {
       "provenance": [],
       "mount_file_id": "1eKWlpyRPemghzmN8X1cYFW6MOJTJpUDm",
-      "authorship_tag": "ABX9TyPhgkyO/QcwbIzp8WgKoCKN",
+      "authorship_tag": "ABX9TyMbT6JOb3NcKH1SILtWAZ8f",
       "include_colab_link": true
     },
     "kernelspec": {
