--- a/functions_fixed_table.ipynb
+++ b/functions_fixed_table.ipynb
@@ -350,26 +350,66 @@
     {
       "cell_type": "code",
       "source": [
-        "import pandas as pd\n",
-        "def create_new_fixed_table(file_name,list_player_names,list_urls):\n",
-        "  df_player_fixed=pd.DataFrame()\n",
-        "  nb_error=0\n",
-        "  for player_k in range(len(list_player_names)):\n",
-        "    url=list_urls[player_k]\n",
-        "    player_name=list_player_names[player_k]\n",
-        "    try:\n",
-        "      df_player_fixed[player_name]=find_all_stats(url)\n",
-        "    except Exception as e:\n",
-        "      nb_error+=1\n",
+        "# import pandas as pd\n",
+        "# def create_new_fixed_table(file_name,list_player_names,list_urls):\n",
+        "#   df_player_fixed=pd.DataFrame()\n",
+        "#   nb_error=0\n",
+        "#   for player_k in range(len(list_player_names)):\n",
+        "#     url=list_urls[player_k]\n",
+        "#     player_name=list_player_names[player_k]\n",
+        "#     try:\n",
+        "#       df_player_fixed[player_name]=find_all_stats(url)\n",
+        "#     except Exception as e:\n",
+        "#       nb_error+=1\n",
         "\n",
-        "  csv_player_fixed=df_player_fixed.T.to_csv(index=True)\n",
+        "#   csv_player_fixed=df_player_fixed.T.to_csv(index=True)\n",
         "\n",
-        "  add_file_github(file_name,csv_player_fixed)"
+        "#   add_file_github(file_name,csv_player_fixed)"
       ],
       "metadata": {
         "id": "qHKHEis671g8"
       },
       "execution_count": 24,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import pandas as pd\n",
+        "import concurrent.futures\n",
+        "\n",
+        "def fetch_player_stats(url, player_name):\n",
+        "    try:\n",
+        "        stats = find_all_stats(url)\n",
+        "        return (player_name, stats)\n",
+        "    except Exception as e:\n",
+        "        return (player_name, None)\n",
+        "\n",
+        "def create_new_fixed_table(file_name, list_player_names, list_urls):\n",
+        "    player_data = []\n",
+        "\n",
+        "    with concurrent.futures.ThreadPoolExecutor() as executor:\n",
+        "        futures = [executor.submit(fetch_player_stats, url, player_name) for url, player_name in zip(list_urls, list_player_names)]\n",
+        "\n",
+        "        for future in concurrent.futures.as_completed(futures):\n",
+        "            player_name, stats = future.result()\n",
+        "            if stats is not None:\n",
+        "                player_data.append((player_name, stats))\n",
+        "\n",
+        "    df_player_fixed = pd.DataFrame(player_data, columns=['Player Name', 'Stats'])\n",
+        "\n",
+        "    # You can save the DataFrame to a file if needed.\n",
+        "    df_player_fixed.to_csv(file_name, index=False)\n",
+        "\n",
+        "    return df_player_fixed\n",
+        "\n",
+        "# Usage\n",
+        "df = create_new_fixed_table(\"output.csv\", list_player_names, list_urls)\n"
+      ],
+      "metadata": {
+        "id": "wZpL9P6oamSO"
+      },
+      "execution_count": null,
       "outputs": []
     }
   ],
@@ -377,7 +417,7 @@
     "colab": {
       "provenance": [],
       "mount_file_id": "1eKWlpyRPemghzmN8X1cYFW6MOJTJpUDm",
-      "authorship_tag": "ABX9TyMbT6JOb3NcKH1SILtWAZ8f",
+      "authorship_tag": "ABX9TyOxmUaTKAscDSoUMazxps9K",
       "include_colab_link": true
     },
     "kernelspec": {
