--- a/functions_fixed_table.ipynb
+++ b/functions_fixed_table.ipynb
@@ -404,7 +404,7 @@
         "    return df_player_fixed\n",
         "\n",
         "# Usage\n",
-        "df = create_new_fixed_table(\"output.csv\", list_player_names, list_urls)\n"
+        "# df = create_new_fixed_table(\"output.csv\", list_player_names, list_urls)\n"
       ],
       "metadata": {
         "id": "wZpL9P6oamSO"
@@ -417,7 +417,7 @@
     "colab": {
       "provenance": [],
       "mount_file_id": "1eKWlpyRPemghzmN8X1cYFW6MOJTJpUDm",
-      "authorship_tag": "ABX9TyOxmUaTKAscDSoUMazxps9K",
+      "authorship_tag": "ABX9TyO2JSGPcOZKouYZ77dyZVed",
       "include_colab_link": true
     },
     "kernelspec": {
