--- a/functions_fixed_table.ipynb
+++ b/functions_fixed_table.ipynb
@@ -394,9 +394,10 @@
         "        for future in concurrent.futures.as_completed(futures):\n",
         "            player_name, stats = future.result()\n",
         "            if stats is not None:\n",
-        "                player_data.append((player_name, stats))\n",
+        "                # Flatten the stats dictionary into separate columns\n",
+        "                player_data.append({**{'Player Name': player_name}, **stats})\n",
         "\n",
-        "    df_player_fixed = pd.DataFrame(player_data, columns=['Player Name', 'Stats'])\n",
+        "    df_player_fixed = pd.DataFrame(player_data)\n",
         "\n",
         "    # You can save the DataFrame to a file if needed.\n",
         "    df_player_fixed.to_csv(file_name, index=False)\n",
@@ -404,7 +405,7 @@
         "    return df_player_fixed\n",
         "\n",
         "# Usage\n",
-        "# df = create_new_fixed_table(\"output.csv\", list_player_names, list_urls)\n"
+        "df = create_new_fixed_table(\"output.csv\", list_player_names, list_urls)\n"
       ],
       "metadata": {
         "id": "wZpL9P6oamSO"
@@ -417,7 +418,7 @@
     "colab": {
       "provenance": [],
       "mount_file_id": "1eKWlpyRPemghzmN8X1cYFW6MOJTJpUDm",
-      "authorship_tag": "ABX9TyO2JSGPcOZKouYZ77dyZVed",
+      "authorship_tag": "ABX9TyNQr50KnyYN+zPa0AMm6Hrr",
       "include_colab_link": true
     },
     "kernelspec": {
