--- a/functions_fixed_table.ipynb
+++ b/functions_fixed_table.ipynb
@@ -402,10 +402,7 @@
         "    # You can save the DataFrame to a file if needed.\n",
         "    df_player_fixed.to_csv(file_name, index=False)\n",
         "\n",
-        "    return df_player_fixed\n",
-        "\n",
-        "# Usage\n",
-        "df = create_new_fixed_table(\"output.csv\", list_player_names, list_urls)\n"
+        "    return df_player_fixed\n"
       ],
       "metadata": {
         "id": "wZpL9P6oamSO"
@@ -418,7 +415,7 @@
     "colab": {
       "provenance": [],
       "mount_file_id": "1eKWlpyRPemghzmN8X1cYFW6MOJTJpUDm",
-      "authorship_tag": "ABX9TyNQr50KnyYN+zPa0AMm6Hrr",
+      "authorship_tag": "ABX9TyNO9z9SsYWP8TY2vCK9lCmZ",
       "include_colab_link": true
     },
     "kernelspec": {
