--- a/functions_fixed_table.ipynb
+++ b/functions_fixed_table.ipynb
@@ -385,7 +385,8 @@
         "    except Exception as e:\n",
         "        return (player_name, None)\n",
         "\n",
-        "def create_new_fixed_table(file_name, list_player_names, list_urls):\n",
+        "#the below function has been created by the chatgpt optimizer\n",
+        "def create_new_fixed_table(file_name, list_player_names, list_urls,write_csv=False):\n",
         "    player_data = []\n",
         "\n",
         "    with concurrent.futures.ThreadPoolExecutor() as executor:\n",
@@ -400,7 +401,9 @@
         "    df_player_fixed = pd.DataFrame(player_data)\n",
         "\n",
         "    # You can save the DataFrame to a file if needed.\n",
-        "    df_player_fixed.to_csv(file_name, index=False)\n",
+        "    if write_csv=True:\n",
+        "      df_player_fixed_csv=df_player_fixed.to_csv(file_name, index=False)\n",
+        "      add_file_github('df_player_fixed.csv',df_player_fixed_csv)\n",
         "\n",
         "    return df_player_fixed\n"
       ],
@@ -415,7 +418,7 @@
     "colab": {
       "provenance": [],
       "mount_file_id": "1eKWlpyRPemghzmN8X1cYFW6MOJTJpUDm",
-      "authorship_tag": "ABX9TyNO9z9SsYWP8TY2vCK9lCmZ",
+      "authorship_tag": "ABX9TyOZ4Elw508pAHZcs8550Gf5",
       "include_colab_link": true
     },
     "kernelspec": {
