--- a/functions_fixed_table.ipynb
+++ b/functions_fixed_table.ipynb
@@ -401,7 +401,7 @@
         "    df_player_fixed = pd.DataFrame(player_data)\n",
         "\n",
         "    # You can save the DataFrame to a file if needed.\n",
-        "    if write_csv=True:\n",
+        "    if write_csv==True:\n",
         "      df_player_fixed_csv=df_player_fixed.to_csv(file_name, index=False)\n",
         "      add_file_github('df_player_fixed.csv',df_player_fixed_csv)\n",
         "\n",
@@ -418,7 +418,7 @@
     "colab": {
       "provenance": [],
       "mount_file_id": "1eKWlpyRPemghzmN8X1cYFW6MOJTJpUDm",
-      "authorship_tag": "ABX9TyOZ4Elw508pAHZcs8550Gf5",
+      "authorship_tag": "ABX9TyM3XyDhmWEF5WIyHRTp/4lp",
       "include_colab_link": true
     },
     "kernelspec": {
