--- a/functions_fixed_table.ipynb
+++ b/functions_fixed_table.ipynb
@@ -402,7 +402,7 @@
         "\n",
         "    # You can save the DataFrame to a file if needed.\n",
         "    if write_csv==True:\n",
-        "      df_player_fixed_csv=df_player_fixed.to_csv(file_name, index=False)\n",
+        "      df_player_fixed_csv=df_player_fixed.T.to_csv(index=True)\n",
         "      add_file_github('df_player_fixed.csv',df_player_fixed_csv)\n",
         "\n",
         "    return df_player_fixed\n"
@@ -418,7 +418,7 @@
     "colab": {
       "provenance": [],
       "mount_file_id": "1eKWlpyRPemghzmN8X1cYFW6MOJTJpUDm",
-      "authorship_tag": "ABX9TyM3XyDhmWEF5WIyHRTp/4lp",
+      "authorship_tag": "ABX9TyM6KXY6376dkCiuuFg5gbwy",
       "include_colab_link": true
     },
     "kernelspec": {
