--- a/functions_fixed_table.ipynb
+++ b/functions_fixed_table.ipynb
@@ -42,7 +42,8 @@
         "        print(f\"Failed to install {package_name}\") # Install the PyGitHub library\n",
         "\n",
         "install_package(\"requests\")\n",
-        "install_package(\"PyGitHub\")"
+        "install_package(\"PyGitHub\")\n",
+        "install_package(\"pandas\")"
       ]
     },
     {
@@ -418,7 +419,7 @@
     "colab": {
       "provenance": [],
       "mount_file_id": "1eKWlpyRPemghzmN8X1cYFW6MOJTJpUDm",
-      "authorship_tag": "ABX9TyOluyjiBkCFl4PMbeRgn6AE",
+      "authorship_tag": "ABX9TyN4ppPUU56D6Bp7amw2yib3",
       "include_colab_link": true
     },
     "kernelspec": {
