--- a/scraping_functions.ipynb
+++ b/scraping_functions.ipynb
@@ -122,7 +122,7 @@
         "  selected_elements={}\n",
         "\n",
         "  for element_name in element_names_list:\n",
-        "    selected_elements[element_name] = html_parsed.find_all('span', class_=element_name)\n",
+        "    selected_elements[element_name] = html_parsed.find_all(element_searched, class_=element_name)\n",
         "\n",
         "  return (selected_elements)"
       ],
@@ -137,7 +137,7 @@
     "colab": {
       "provenance": [],
       "mount_file_id": "1eKWlpyRPemghzmN8X1cYFW6MOJTJpUDm",
-      "authorship_tag": "ABX9TyNneLB/PP0p52AeLu4JvwLi",
+      "authorship_tag": "ABX9TyOpp17l4ptKnyL4HSkvHqms",
       "include_colab_link": true
     },
     "kernelspec": {
