--- a/functions_fixed_table.ipynb
+++ b/functions_fixed_table.ipynb
@@ -12,13 +12,25 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "source": [
+        "import subprocess\n",
+        "import sys"
+      ],
+      "metadata": {
+        "id": "V1g-E21RT8CO"
+      },
+      "execution_count": 1,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 2,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "Gorg-TjzXeal",
-        "outputId": "136d0e59-c6fd-49fa-98e4-a913be128bc1"
+        "outputId": "f1484fdc-f155-4bb7-d72c-5f18a6208c58"
       },
       "outputs": [
         {
@@ -26,14 +38,12 @@
           "name": "stdout",
           "text": [
             "Successfully installed requests\n",
-            "Successfully installed PyGitHub\n"
+            "Successfully installed PyGitHub\n",
+            "Successfully installed pandas\n"
           ]
         }
       ],
       "source": [
-        "import subprocess\n",
-        "import sys\n",
-        "\n",
         "def install_package(package_name):\n",
         "    try:\n",
         "        subprocess.check_call([sys.executable, '-m', 'pip', 'install', package_name])\n",
@@ -56,74 +66,62 @@
         "from datetime import datetime, timedelta\n",
         "\n",
         "import os\n",
+        "import io\n",
         "from github import Github\n",
-        "from io import StringIO\n"
+        "\n",
+        "import importlib.util\n",
+        "import nbformat\n",
+        "import pandas"
       ],
       "metadata": {
         "id": "4uiY8VTA6kN2"
       },
-      "execution_count": 4,
+      "execution_count": 5,
       "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "#Set Up Github Environment"
-      ],
-      "metadata": {
-        "id": "t_8rkjbj_xFZ"
-      }
     },
     {
       "cell_type": "code",
       "source": [
-        "# Replace these with your GitHub credentials\n",
-        "username = \"jeanbouteiller-ds\"\n",
+        "# Define the URL of the nb1 notebook on GitHub\n",
+        "github_functions_url = \"https://raw.githubusercontent.com/jeanbouteiller-ds/tennis_prediction/main/github_functions.ipynb\"\n",
+        "scraping_functions_url = \"https://raw.githubusercontent.com/jeanbouteiller-ds/tennis_prediction/main/scraping_functions.ipynb\"\n",
         "\n",
-        "github_url = \"https://raw.githubusercontent.com/jeanbouteiller-ds/tennis_prediction/main/password.txt\"\n",
-        "response = requests.get(github_url)\n",
+        "for file_functions in [github_functions_url,scraping_functions_url]:\n",
+        "  # Download the notebook as a raw .ipynb file\n",
+        "  response = requests.get(file_functions)\n",
+        "  if response.status_code == 200:\n",
+        "    notebook_content = response.text\n",
         "\n",
-        "password= response.text.replace('\\n','')\n",
-        "repository_name = \"tennis_prediction\"\n",
-        "branch_name = \"main\"  # Replace with your branch name\n",
+        "    # Parse the notebook content\n",
+        "    notebook = nbformat.reads(notebook_content, as_version=4)\n",
         "\n",
-        "\n",
-        "# Initialize the GitHub client\n",
-        "g = Github(username, password)\n",
-        "\n",
-        "# Access the desired repository\n",
-        "repo = g.get_user().get_repo(repository_name)\n",
-        "\n",
-        "\n",
-        "def add_file_github(file_name,file_content):\n",
-        "  try:\n",
-        "      file = repo.get_contents(file_name, ref=branch_name)\n",
-        "      sha = file.sha\n",
-        "  except Exception as e:\n",
-        "      sha = None\n",
-        "\n",
-        "  if sha:\n",
-        "      repo.update_file(file_name, \"Update file\", file_content, sha, branch_name)\n",
-        "      # print(f\"Updated {file_name} in {repository_name}\")\n",
-        "  else:\n",
-        "      repo.create_file(file_name, \"Create file\", file_content, branch_name)\n",
-        "      # print(f\"Created {file_name} in {repository_name}\")\n",
-        "\n",
-        "def get_file_content(file_name):\n",
-        "  file_content = repo.get_contents(file_name, ref=branch_name)\n",
-        "  file_content = file_content.decoded_content.decode(\"utf-8\")\n",
-        "  if file_name.split('.')[1]=='txt':\n",
-        "    file_content=eval(file_content)\n",
-        "    return(file_content)\n",
-        "  if file_name.split('.')[1]=='csv':\n",
-        "    file_content=pd.read_csv(StringIO(file_content))\n",
-        "    return(file_content)"
+        "    # Now you can execute the cells in the notebook\n",
+        "    for cell in notebook.cells:\n",
+        "        if cell.cell_type == 'code':\n",
+        "            exec(cell.source)"
       ],
       "metadata": {
-        "id": "KnltnHuj_0Fy"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "xT1sXj9qUHmC",
+        "outputId": "8d70f15a-80e2-4914-9bfb-ad35eb78d888"
       },
-      "execution_count": 5,
-      "outputs": []
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Successfully installed requests\n",
+            "Successfully installed PyGitHub\n",
+            "Successfully installed pandas\n",
+            "Successfully installed requests\n",
+            "Successfully installed PyGitHub\n",
+            "Successfully installed pandas\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -136,7 +134,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": 10,
       "metadata": {
         "id": "xdDpI62ia13V"
       },
@@ -155,53 +153,29 @@
         "    return mondays\n",
         "\n",
         "#get the list of all urls in which we have the rankings\n",
-        "def find_list_weekly_ranking_url(start_date, end_date):\n",
+        "def find_list_weekly_ranking_url(start_date, end_date,nb_players_ranking):\n",
         "  list_ranking_urls=[]\n",
         "  #date should be in format YYYY-MM-DD and should be a string\n",
         "  list_dates=get_list_ranking_dates(start_date, end_date)\n",
         "\n",
         "  for date_ranking in list_dates:\n",
-        "    list_ranking_urls.append('https://www.atptour.com/en/rankings/singles?rankRange=1-200&rankDate='+date_ranking)\n",
+        "    list_ranking_urls.append('https://www.atptour.com/en/rankings/singles?rankRange=1-'+str(nb_players_ranking)+'&rankDate='+date_ranking)\n",
         "  return(list_ranking_urls)\n",
         "\n"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": 11,
       "metadata": {
         "id": "eHvcYNfZxX6T"
       },
       "outputs": [],
       "source": [
-        "#for each url, we extract the spans with the url associated with all players\n",
-        "def span_from_url(weekly_ranking_url,span_list):\n",
-        "  headers = {\n",
-        "      'User-Agent': 'Your User Agent String Here'+str(random.random())\n",
-        "  }\n",
-        "\n",
-        "  # Send an HTTP GET request with headers\n",
-        "  response = requests.get(weekly_ranking_url, headers=headers)\n",
-        "\n",
-        "  # Check if the request was successful (status code 200)\n",
-        "  if response.status_code == 200:\n",
-        "      # Get the HTML content from the response\n",
-        "      html_code = response.text\n",
-        "  else:\n",
-        "      html_code=''\n",
-        "\n",
-        "  soup = BeautifulSoup(html_code, 'html.parser')\n",
-        "  selected_span={}\n",
-        "\n",
-        "  for span_name in span_list:\n",
-        "    selected_span[span_name] = soup.find_all('span', class_=span_name)\n",
-        "\n",
-        "  return (selected_span)\n",
-        "\n",
         "#from the above spans, we extract all urls\n",
         "def players_from_url(weekly_ranking_url):\n",
         "\n",
-        "  selected_span=span_from_url(weekly_ranking_url,['player-cell-wrapper'])['player-cell-wrapper']\n",
+        "  selected_span=html_elements_from_url(weekly_ranking_url,'span',['player-cell-wrapper'])['player-cell-wrapper']\n",
         "\n",
         "  list_urls=[]\n",
         "  list_players=[]\n",
@@ -237,13 +211,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": 12,
       "metadata": {
         "id": "1PCwNHwCbVHv"
       },
       "outputs": [],
       "source": [
-        "def create_initial_list(start_date,end_date):\n",
+        "def create_initial_list(start_date,end_date,nb_players_ranking=200):\n",
         "  list_all_names=[]\n",
         "  list_all_urls=[]\n",
         "\n",
@@ -251,7 +225,7 @@
         "    # Change this to your desired end date\n",
         "\n",
         "  list_year=[]\n",
-        "  for weekly_url_ranking in find_list_weekly_ranking_url(start_date, end_date):\n",
+        "  for weekly_url_ranking in find_list_weekly_ranking_url(start_date, end_date,nb_players_ranking):\n",
         "    if weekly_url_ranking.split('rankDate=')[1].split('-')[0] not in list_year:\n",
         "      list_year.append(weekly_url_ranking.split('rankDate=')[1].split('-')[0])\n",
         "      # print(list_year)\n",
@@ -282,7 +256,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": 13,
       "metadata": {
         "id": "rslHQS1EXrKv"
       },
@@ -291,7 +265,7 @@
         "def find_stats_from_span(url,span_names_list=['table-height-cm-wrapper','table-weight-lbs','table-birthday'],\n",
         "               feature_names=['height','weight (lbs)','Birthdate']):\n",
         "  dict_data={}\n",
-        "  data_spans=span_from_url(url,span_names_list)\n",
+        "  data_spans=html_elements_from_url(url,'span',span_names_list)\n",
         "  for k in range (len(feature_names)):\n",
         "    key=feature_names[k]\n",
         "    values=list(data_spans.values())[k][0].get_text()\n",
@@ -307,21 +281,8 @@
         "  #div_dict should be a dict where the key is the label that we want to find in the html code\n",
         "  # and the values are the div that we want to search (for label and values)\n",
         "  dict_data={}\n",
-        "  headers = {\n",
-        "      'User-Agent': 'Your User Agent String Here'+str(random.random())\n",
-        "  }\n",
         "\n",
-        "  # Send an HTTP GET request with headers\n",
-        "  response = requests.get(url, headers=headers)\n",
-        "\n",
-        "  # Check if the request was successful (status code 200)\n",
-        "  if response.status_code == 200:\n",
-        "      # Get the HTML content from the response\n",
-        "      html_code = response.text\n",
-        "  else:\n",
-        "      html_code=''\n",
-        "\n",
-        "  soup = BeautifulSoup(html_code, 'html.parser')\n",
+        "  soup = parse_html_from_url(url)\n",
         "\n",
         "  for feature_name in div_dict.keys():\n",
         "\n",
@@ -345,32 +306,7 @@
       "metadata": {
         "id": "axoxENTs6eZ5"
       },
-      "execution_count": 15,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "# import pandas as pd\n",
-        "# def create_new_fixed_table(file_name,list_player_names,list_urls):\n",
-        "#   df_player_fixed=pd.DataFrame()\n",
-        "#   nb_error=0\n",
-        "#   for player_k in range(len(list_player_names)):\n",
-        "#     url=list_urls[player_k]\n",
-        "#     player_name=list_player_names[player_k]\n",
-        "#     try:\n",
-        "#       df_player_fixed[player_name]=find_all_stats(url)\n",
-        "#     except Exception as e:\n",
-        "#       nb_error+=1\n",
-        "\n",
-        "#   csv_player_fixed=df_player_fixed.T.to_csv(index=True)\n",
-        "\n",
-        "#   add_file_github(file_name,csv_player_fixed)"
-      ],
-      "metadata": {
-        "id": "qHKHEis671g8"
-      },
-      "execution_count": 24,
+      "execution_count": 14,
       "outputs": []
     },
     {
@@ -411,6 +347,15 @@
       "metadata": {
         "id": "wZpL9P6oamSO"
       },
+      "execution_count": 15,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "cHWJDeiEZJx1"
+      },
       "execution_count": null,
       "outputs": []
     }
@@ -419,7 +364,7 @@
     "colab": {
       "provenance": [],
       "mount_file_id": "1eKWlpyRPemghzmN8X1cYFW6MOJTJpUDm",
-      "authorship_tag": "ABX9TyN4ppPUU56D6Bp7amw2yib3",
+      "authorship_tag": "ABX9TyOTQd0ucvPD8Zvgz+kNhgOR",
       "include_colab_link": true
     },
     "kernelspec": {
