--- a/scraping_functions.ipynb
+++ b/scraping_functions.ipynb
@@ -19,12 +19,12 @@
       "metadata": {
         "id": "V1g-E21RT8CO"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -52,8 +52,8 @@
         "        print(f\"Failed to install {package_name}\") # Install the PyGitHub library\n",
         "\n",
         "install_package(\"requests\")\n",
-        "install_package(\"PyGitHub\")\n",
-        "install_package(\"pandas\")"
+        "# install_package(\"PyGitHub\")\n",
+        "# install_package(\"pandas\")"
       ]
     },
     {
@@ -76,7 +76,7 @@
       "metadata": {
         "id": "4uiY8VTA6kN2"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -137,7 +137,7 @@
     "colab": {
       "provenance": [],
       "mount_file_id": "1eKWlpyRPemghzmN8X1cYFW6MOJTJpUDm",
-      "authorship_tag": "ABX9TyOpp17l4ptKnyL4HSkvHqms",
+      "authorship_tag": "ABX9TyNOZs20pNZj2VCGD7Ahhcgh",
       "include_colab_link": true
     },
     "kernelspec": {
