--- a/functions_fixed_table.ipynb
+++ b/functions_fixed_table.ipynb
@@ -52,8 +52,8 @@
         "        print(f\"Failed to install {package_name}\") # Install the PyGitHub library\n",
         "\n",
         "install_package(\"requests\")\n",
-        "install_package(\"PyGitHub\")\n",
-        "install_package(\"pandas\")"
+        "# install_package(\"PyGitHub\")\n",
+        "# install_package(\"pandas\")"
       ]
     },
     {
@@ -105,9 +105,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "xT1sXj9qUHmC",
-        "outputId": "8d70f15a-80e2-4914-9bfb-ad35eb78d888"
+        "outputId": "a993de0e-0f4b-4c43-f280-303fdb705112"
       },
-      "execution_count": 7,
+      "execution_count": 16,
       "outputs": [
         {
           "output_type": "stream",
@@ -364,7 +364,7 @@
     "colab": {
       "provenance": [],
       "mount_file_id": "1eKWlpyRPemghzmN8X1cYFW6MOJTJpUDm",
-      "authorship_tag": "ABX9TyOTQd0ucvPD8Zvgz+kNhgOR",
+      "authorship_tag": "ABX9TyOid5/5aDDubGQVgnKep/XU",
       "include_colab_link": true
     },
     "kernelspec": {
