--- a/functions_fixed_table.ipynb
+++ b/functions_fixed_table.ipynb
@@ -67,11 +67,11 @@
         "\n",
         "import os\n",
         "import io\n",
-        "from github import Github\n",
+        "# from github import Github\n",
         "\n",
         "import importlib.util\n",
         "import nbformat\n",
-        "import pandas"
+        "# import pandas"
       ],
       "metadata": {
         "id": "4uiY8VTA6kN2"
@@ -364,7 +364,7 @@
     "colab": {
       "provenance": [],
       "mount_file_id": "1eKWlpyRPemghzmN8X1cYFW6MOJTJpUDm",
-      "authorship_tag": "ABX9TyOid5/5aDDubGQVgnKep/XU",
+      "authorship_tag": "ABX9TyMPOaw+QVp0eorGlNzX5F6R",
       "include_colab_link": true
     },
     "kernelspec": {
