--- a/update_fixed_table.ipynb
+++ b/update_fixed_table.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOkzjqY42P6vsoUOdnQ8i7t",
+      "authorship_tag": "ABX9TyMLc05gvcCvaF9QjIyXH5wH",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -25,6 +25,26 @@
       "source": [
         "<a href=\"https://colab.research.google.com/github/jeanbouteiller-ds/tennis_prediction/blob/main/update_fixed_table.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def install_package(package_name):\n",
+        "    try:\n",
+        "        subprocess.check_call([sys.executable, '-m', 'pip', 'install', package_name])\n",
+        "        print(f\"Successfully installed {package_name}\")\n",
+        "    except subprocess.CalledProcessError:\n",
+        "        print(f\"Failed to install {package_name}\") # Install the PyGitHub library\n",
+        "\n",
+        "install_package(\"requests\")\n",
+        "install_package(\"PyGitHub\")\n",
+        "install_package(\"pandas\")"
+      ],
+      "metadata": {
+        "id": "oHh3Jgp5dHP_"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
