--- a/update_fixed_table.ipynb
+++ b/update_fixed_table.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMLc05gvcCvaF9QjIyXH5wH",
+      "authorship_tag": "ABX9TyMdbuO3m9koLwrbq3oQEiUS",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -29,6 +29,9 @@
     {
       "cell_type": "code",
       "source": [
+        "import subprocess\n",
+        "import sys\n",
+        "\n",
         "def install_package(package_name):\n",
         "    try:\n",
         "        subprocess.check_call([sys.executable, '-m', 'pip', 'install', package_name])\n",
