--- a/functions_fixed_table.ipynb
+++ b/functions_fixed_table.ipynb
@@ -19,27 +19,25 @@
       "metadata": {
         "id": "V1g-E21RT8CO"
       },
-      "execution_count": 1,
+      "execution_count": 5,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 6,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "Gorg-TjzXeal",
-        "outputId": "f1484fdc-f155-4bb7-d72c-5f18a6208c58"
+        "outputId": "7bc9b98c-ae15-46bb-986a-b62109093d41"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Successfully installed requests\n",
-            "Successfully installed PyGitHub\n",
-            "Successfully installed pandas\n"
+            "Successfully installed requests\n"
           ]
         }
       ],
@@ -76,7 +74,7 @@
       "metadata": {
         "id": "4uiY8VTA6kN2"
       },
-      "execution_count": 5,
+      "execution_count": 7,
       "outputs": []
     },
     {
@@ -105,9 +103,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "xT1sXj9qUHmC",
-        "outputId": "a993de0e-0f4b-4c43-f280-303fdb705112"
+        "outputId": "6282a3a6-4d4a-4839-bac2-2051de10fd2d"
       },
-      "execution_count": 16,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "stream",
@@ -116,9 +114,7 @@
             "Successfully installed requests\n",
             "Successfully installed PyGitHub\n",
             "Successfully installed pandas\n",
-            "Successfully installed requests\n",
-            "Successfully installed PyGitHub\n",
-            "Successfully installed pandas\n"
+            "Successfully installed requests\n"
           ]
         }
       ]
@@ -351,20 +347,99 @@
       "outputs": []
     },
     {
-      "cell_type": "code",
-      "source": [],
+      "cell_type": "markdown",
+      "source": [
+        "# Match tables functions"
+      ],
       "metadata": {
-        "id": "cHWJDeiEZJx1"
+        "id": "5mqWlMoBhvbE"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def find_matchs(tournament_row):\n",
+        "  \"\"\"\n",
+        "  Takes a row of the df_tournament.csv and returns the different games\n",
+        "  \"\"\"\n",
+        "  list_matchs_tournament=[]\n",
+        "  tournament_url=\"https://www.atptour.com/en/scores/archive\"+tournament_row[\"url\"].split('tournaments')[1].split(\"overview\")[0]+tournament_row['tournament_date'].split('.')[0]+'/results'\n",
+        "  scrapping_tournament=html_elements_from_url(tournament_url,\"div\",['scores-results-content'])[\"scores-results-content\"]\n",
+        "  if len(scrapping_tournament)>0:\n",
+        "    scrapping_tournament=scrapping_tournament[0]\n",
+        "    all_round=scrapping_tournament.find_all(\"tbody\")\n",
+        "    round_tracker=0\n",
+        "    for round in all_round:\n",
+        "      all_games_round=round.find_all(\"td\",\"day-table-name\")\n",
+        "      round_name=scrapping_tournament.find_all(\"th\")[round_tracker]\n",
+        "      for game_number in range(0,len(all_games_round),2):\n",
+        "        game_dict={}\n",
+        "        game_dict[\"tournament_name\"]=tournament_row[\"tournament_name\"]\n",
+        "        game_dict[\"tournament_date\"]=tournament_row[\"tournament_date\"]\n",
+        "        game_dict[\"round\"]=round_name.text\n",
+        "        game_dict[\"winner_name\"]=all_games_round[game_number].text.strip()\n",
+        "        game_dict[\"loser_name\"]=all_games_round[game_number+1].text.strip()\n",
+        "        game_dict[\"score\"]=re.sub(r'\\s+','-',scrapping_tournament.find_all(\"td\",\"day-table-score\")[game_number].text.strip().replace(\"\\r\\n\",''))\n",
+        "        list_matchs.append(game_dict)\n",
+        "      round_tracker+=1\n",
+        "  else:\n",
+        "    game_dict={}\n",
+        "    game_dict[\"tournament_name\"]=tournament_row[\"tournament_name\"]\n",
+        "    game_dict[\"tournament_date\"]=tournament_row[\"tournament_date\"]\n",
+        "    list_matchs_tournament.append(game_dict)\n",
+        "  return list_matchs_tournament"
+      ],
+      "metadata": {
+        "id": "-SCDJNk7h8GT"
       },
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "\n",
+        "import pandas as pd\n",
+        "from tqdm import tqdm\n",
+        "import re\n",
+        "\n",
+        "df_all_matchs=get_file_content(\"df_all_matchs.csv\")\n",
+        "df_tournaments=get_file_content(\"df_tournaments.csv\")\n",
+        "\n",
+        "list_matchs=[]\n",
+        "pct_tournaments=1\n",
+        "nb_rows=int(pct_tournaments*len(df_tournaments))\n",
+        "for index,row in tqdm(df_tournaments[:int(nb_rows)].iterrows(), total=nb_rows):\n",
+        "  list_matchs+=find_matchs(row)\n",
+        "\n",
+        "games_to_add=pd.DataFrame(list_matchs).dropna(subset='winner_name')\n",
+        "\n",
+        "final_df=pd.concat([df_all_matchs,games_to_add]).drop_duplicates()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "cHWJDeiEZJx1",
+        "outputId": "4051e71c-3a14-4562-dea3-7555b0d89392"
+      },
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "100%|██████████| 7/7 [00:10<00:00,  1.50s/it]\n"
+          ]
+        }
+      ]
     }
   ],
   "metadata": {
     "colab": {
       "provenance": [],
       "mount_file_id": "1eKWlpyRPemghzmN8X1cYFW6MOJTJpUDm",
-      "authorship_tag": "ABX9TyMPOaw+QVp0eorGlNzX5F6R",
+      "authorship_tag": "ABX9TyPZfWrhWNaHcGOW366eR8T/",
       "include_colab_link": true
     },
     "kernelspec": {
