--- a/functions_fixed_table.ipynb
+++ b/functions_fixed_table.ipynb
@@ -399,22 +399,22 @@
       "cell_type": "code",
       "source": [
         "\n",
-        "import pandas as pd\n",
-        "from tqdm import tqdm\n",
-        "import re\n",
+        "# import pandas as pd\n",
+        "# from tqdm import tqdm\n",
+        "# import re\n",
         "\n",
-        "df_all_matchs=get_file_content(\"df_all_matchs.csv\")\n",
-        "df_tournaments=get_file_content(\"df_tournaments.csv\")\n",
+        "# df_all_matchs=get_file_content(\"df_all_matchs.csv\")\n",
+        "# df_tournaments=get_file_content(\"df_tournaments.csv\")\n",
         "\n",
-        "list_matchs=[]\n",
-        "pct_tournaments=1\n",
-        "nb_rows=int(pct_tournaments*len(df_tournaments))\n",
-        "for index,row in tqdm(df_tournaments[:int(nb_rows)].iterrows(), total=nb_rows):\n",
-        "  list_matchs+=find_matchs(row)\n",
+        "# list_matchs=[]\n",
+        "# pct_tournaments=1\n",
+        "# nb_rows=int(pct_tournaments*len(df_tournaments))\n",
+        "# for index,row in tqdm(df_tournaments[:int(nb_rows)].iterrows(), total=nb_rows):\n",
+        "#   list_matchs+=find_matchs(row)\n",
         "\n",
-        "games_to_add=pd.DataFrame(list_matchs).dropna(subset='winner_name')\n",
+        "# games_to_add=pd.DataFrame(list_matchs).dropna(subset='winner_name')\n",
         "\n",
-        "final_df=pd.concat([df_all_matchs,games_to_add]).drop_duplicates()"
+        "# final_df=pd.concat([df_all_matchs,games_to_add]).drop_duplicates()"
       ],
       "metadata": {
         "colab": {
@@ -439,7 +439,7 @@
     "colab": {
       "provenance": [],
       "mount_file_id": "1eKWlpyRPemghzmN8X1cYFW6MOJTJpUDm",
-      "authorship_tag": "ABX9TyPZfWrhWNaHcGOW366eR8T/",
+      "authorship_tag": "ABX9TyOWRIu47jSyZ5jflu6avpA2",
       "include_colab_link": true
     },
     "kernelspec": {
